--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto" data-theme="auto">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
+<head><script src="/CodeLab-TechBlog/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=CodeLab-TechBlog/livereload" data-no-instant defer></script><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
@@ -9,16 +9,16 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="http://localhost:1313/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.aa483ead7c91956807a9c038406d2ffec467bf1d43d976a31e15e110ea849ff2.css" integrity="sha256-qkg&#43;rXyRlWgHqcA4QG0v/sRnvx1D2XajHhXhEOqEn/I=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://localhost:1313/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://localhost:1313/apple-touch-icon.png">
-<link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
+<link rel="canonical" href="http://localhost:1313/CodeLab-TechBlog/404.html">
+<link crossorigin="anonymous" href="/CodeLab-TechBlog/assets/css/stylesheet.aa483ead7c91956807a9c038406d2ffec467bf1d43d976a31e15e110ea849ff2.css" integrity="sha256-qkg&#43;rXyRlWgHqcA4QG0v/sRnvx1D2XajHhXhEOqEn/I=" rel="preload stylesheet" as="style">
+<link rel="icon" href="http://localhost:1313/CodeLab-TechBlog/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/CodeLab-TechBlog/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/CodeLab-TechBlog/favicon-32x32.png">
+<link rel="apple-touch-icon" href="http://localhost:1313/CodeLab-TechBlog/apple-touch-icon.png">
+<link rel="mask-icon" href="http://localhost:1313/CodeLab-TechBlog/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/404.html">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/CodeLab-TechBlog/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -70,7 +70,7 @@
         document.querySelector("html").dataset.theme = 'light';
     }
 
-</script><meta property="og:url" content="http://localhost:1313/404.html">
+</script><meta property="og:url" content="http://localhost:1313/CodeLab-TechBlog/404.html">
   <meta property="og:site_name" content="CodeLab - Tech Blog">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:locale" content="pt-br">
@@ -84,7 +84,7 @@
     <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/" accesskey="h" title="CodeLab - Tech Blog (Alt + H)">CodeLab - Tech Blog</a>
+            <a href="http://localhost:1313/CodeLab-TechBlog/" accesskey="h" title="CodeLab - Tech Blog (Alt + H)">CodeLab - Tech Blog</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -110,7 +110,7 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="http://localhost:1313/posts/" title="Artigos">
+                <a href="http://localhost:1313/CodeLab-TechBlog/posts/" title="Artigos">
                     <span>Artigos</span>
                 </a>
             </li>
@@ -122,7 +122,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://localhost:1313/">CodeLab - Tech Blog</a></span> · 
+        <span>&copy; 2025 <a href="http://localhost:1313/CodeLab-TechBlog/">CodeLab - Tech Blog</a></span> · 
 
     <span>
         Powered by
